--- a/templates/Dependency.html
+++ b/templates/Dependency.html
@@ -18,19 +18,21 @@
 
 <body>
 	<div class='body'>
+	<dev> <img src='../static/img/a.jpg' class="image" style="float : left;width:16%;background-color:#B0C4DE;height: 98px;"></dev>
 		<div class="head-container">
 	<!--	<div class='image-box'> <img src={{ url_for('static', filename='LG.jpg') }} class="image "> </div>  -->
 	    
+		
 		<h1 class="ml9">
   		<span class="text-wrapper">
-    	<span class="letters">LGDOP</span>
+    	<span class="letters">Clarify Code Dependency Check</span>
 		</h1>
 		</div>
-		<dev class='image-box'> <img src='../static/img/LG.jpg' class="image "></dev>
+		<dev> <img src='../static/img/LG.jpg' class="image" style="width:16%;background-color:#B0C4DE;height: 98px;"></dev>
 		<div class="main-container">
 
 			<div class="dependency" id="checkDependency">
-				<h1>Patch Dependency Check</h1>
+				<!--<h1>Patch Dependency Check</h1>-->
 
 				<form class="horizontal-form"  action='/dependency_check_output' method="POST" id="frmCandidateInfo">
 					<fieldset>
