--- a/static/style.css
+++ b/static/style.css
@@ -21,11 +21,11 @@
 	font-weight: bold;
 	font-size: 1.5em;
 	text-align: center;
-	border: 1px solid #000000;
-	background-color: #0000CD;
-	color: #ffffff;
+	/*border: 1px solid #000000;*/
+	background-color: #B0C4DE;
+	color: #000000;
 	padding-top: 30px;
-	width:810px;
+	width:655px;
 	float : left;
 
 
@@ -34,8 +34,8 @@
 
 .ml9 {
   position: relative;
-  font-weight: 200;
-  font-size: 2em;
+  font-weight: 100;
+  font-size: 1.5em;
 }
 
 .ml9 .text-wrapper {
@@ -50,7 +50,7 @@
 .ml9 .letter {
   transform-origin: 50% 100%;
   display: inline-block;
-  line-height: 1em;
+  line-height: 0.75em;
 }
 
 
@@ -66,7 +66,7 @@
 	border : 2px solid #000000;
 	margin-bottom: 30px;
 	margin-top: 10px;
-	background-color:grey
+	background-color:#2F4F4F
 
 
 }
