--- a/templates/Output.html
+++ b/templates/Output.html
@@ -16,8 +16,10 @@
 <body>
 
 	<div class="head-conatiner">
-		<h1 class='blink_me'>Clarify</h1>
-		<h2 class='blink_me'>Code Dependency Check</h2>
+<!--	<dev> <img src='../static/img/a.jpg' class="image" style="float : left;width:16%;background-color:#B0C4DE;height: 98px;"></dev> -->
+		<h1 class='blink_me1'>Clarify</h1>
+		<h2 class='blink_me1'>Code Dependency Check</h2>
+	<!--	<dev> <img src='../static/img/LG.jpg' class="image" style="width:16%;background-color:#B0C4DE;height: 98px;"></dev> -->
 	</div>
 	<div class='main-container'>
 		<table class="tbl-output" border = 1 >
