--- a/templates/Dependency.html
+++ b/templates/Dependency.html
@@ -18,7 +18,7 @@
 
 <body>
 	<div class='body'>
-	<dev> <img src='../static/img/a.jpg' class="image" style="float : left;width:16%;background-color:#B0C4DE;height: 98px;"></dev>
+	<dev> <img src='../static/img/a.jpg' class="image" style="float : left;width:16%;background-color:#AC2832;height: 100px;"></dev>
 		<div class="head-container">
 	<!--	<div class='image-box'> <img src={{ url_for('static', filename='LG.jpg') }} class="image "> </div>  -->
 	    
@@ -28,7 +28,7 @@
     	<span class="letters">Clarify Code Dependency Check</span>
 		</h1>
 		</div>
-		<dev> <img src='../static/img/LG.jpg' class="image" style="width:16%;background-color:#B0C4DE;height: 98px;"></dev>
+		<dev> <img src='../static/img/LG.jpg' class="image" style="width:16%;background-color:#AC2832;height: 100px;"></dev>
 		<div class="main-container">
 
 			<div class="dependency" id="checkDependency">
@@ -41,7 +41,7 @@
 						<div class="form-element">
 							<label for="txtRMticket"> RM ticket *</label>
 							<div class="form-control">
-								<input type="text" name="RMticket" id="txtRMticket" maxlength="30" placeholder="Enter the RM ticket">
+								<input type="text" name="RMticket" id="txtRMticket" maxlength="30" placeholder="Enter the RM ticket for ex RM-12345">
 								<span class="haserror"></span>
 							</div>
 						</div>
@@ -52,7 +52,6 @@
 							<div class="form-control">
 								<select id="ddlApplication" name="application" >
 									<option value="-1">Please select the application...</option>
-									<option value="ASAP">ASAP</option>
 									<option value="Clarify">Clarify</option>
 									<option value="Kenan">Kenan</option>
 								</select>
@@ -67,11 +66,11 @@
 							<div class="form-control">
 								<select id="ddlAffiliate" name="affiliate" class='ddl'>
 									<option value="-1">Please select the affiliate...</option>
-									<option value="AT">AT</option>
+									<option value="at">AT</option>
 									<option value="ch">CH</option>
-									<option value="CZ">CZ</option>
-									<option value="NL">NL</option>
-									<option value="RO">RO</option>
+									<option value="cz">CZ</option>
+									<option value="nl">NL</option>
+									<option value="ro">RO</option>
 								</select>
 								<span class="haserror"></span>
 							</div>
